--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,66 @@
 
 </head>
 <body>
+    <header class="bg-[#F9F7F3]">
+        <nav class="w-4/5 mx-auto pb-11 pt-4">
+            <div class="navbar p-0">
+                <div class="navbar-start">
+                  <button class="btn px-8 py-2 bg-[#B4F461] rounded-lg text-xl font-semibold">Blog</button>
+                </div>
+                <div class="navbar-center">
+                  <div class="flex items-center">
+                    <img class="mr-3" src="./assets/logo.png" alt="">
+                    <h2 class="text-xl font-bold">Donate Bangladesh</h2>
+                  </div>
+                </div>
+                <div class="navbar-end">
+                  <div>
+                    <img src="./assets/coin.png" alt="Coin Image">
+                  </div>
+                  <div>
+                    <span class="text-[#111111b3] ml-2 font-medium text-xl">5500</span>
+                    <span class="text-[#111111b3] font-medium text-xl">BDT</span>
+                  </div>
+                </div>
+              </div>
+        </nav>
+    </header>
     
+    <!-- Hero section -->
+    <section>
+        <div class="pt-20 flex justify-center gap-4 pb-8">
+            <button class=" rounded-lg bg-[#B4F461] px-8 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out">Donation</button>
+
+            <button class=" rounded-lg bg-transparent border border-[#1111114d] px-8 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out text-[#11111199]">History</button>
+        </div>
+
+        <!-- Cards section -->
+        <div class="w-[79.2%] mx-auto flex items-center p-8 border rounded-2xl gap-8">
+            <div class="flex-1"> 
+                <img src="./assets/noakhali.png" alt="">
+            </div>
+
+            <div class="flex-1 space-y-4">
+                <div class="p-[10px] flex items-center bg-[#1111110d] w-28 rounded-lg" > 
+                    <img class="mr-3" src="./assets/coin.png" alt="">
+                    <span class="mr-1 text-[#111111b3]">0</span>
+                    <span class=" text-[#111111b3]">BDT</span>
+                </div>
+                <h2>Donate for Flood at Noakhali, Bangladesh</h2>
+                <p> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                <input type="text" placeholder="Write Donation Amount" class="input w-full border border-solid border-[#1111111a] p-4">
+                <button class="btn btn-success w-full bg-[#B4F461] border-none hover:bg-gray-300 text-xl ">Donate Now</button>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+
     <script src="./js/script.js"></script>
 </body>
 </html>
