--- a/index.html
+++ b/index.html
@@ -1,70 +1,144 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Css link -->
-     <link rel="stylesheet" href="./style/style.css">
-    <!-- Tailwind and daisy ui cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Css link -->
+  <link rel="stylesheet" href="./style/style.css">
+  <!-- Tailwind and daisy ui cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
+
 <body>
-    <header class="bg-[#F9F7F3]">
-        <nav class="w-4/5 mx-auto pb-11 pt-4">
-            <div class="navbar p-0">
-                <div class="navbar-start">
-                  <button class="btn px-8 py-2 bg-[#B4F461] rounded-lg text-xl font-semibold">Blog</button>
-                </div>
-                <div class="navbar-center">
-                  <div class="flex items-center">
-                    <img class="mr-3" src="./assets/logo.png" alt="">
-                    <h2 class="text-xl font-bold">Donate Bangladesh</h2>
-                  </div>
-                </div>
-                <div class="navbar-end">
-                  <div>
-                    <img src="./assets/coin.png" alt="Coin Image">
-                  </div>
-                  <div>
-                    <span class="text-[#111111b3] ml-2 font-medium text-xl">5500</span>
-                    <span class="text-[#111111b3] font-medium text-xl">BDT</span>
-                  </div>
-                </div>
-              </div>
-        </nav>
-    </header>
-    
-    <!-- Hero section -->
-    <section>
-        <div class="pt-20 flex justify-center gap-4 pb-8">
-            <button class=" rounded-lg bg-[#B4F461] px-8 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out">Donation</button>
 
-            <button class=" rounded-lg bg-transparent border border-[#1111114d] px-8 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out text-[#11111199]">History</button>
-        </div>
-
-        <!-- Cards section -->
-        <div class="w-[79.2%] mx-auto flex items-center p-8 border rounded-2xl gap-8">
-            <div class="flex-1"> 
-                <img src="./assets/noakhali.png" alt="">
+  <header class="sticky top-0">
+    <!-- Navbar -->
+    <div class="bg-[#F9F7F3] ">
+      <nav class="w-4/5 mx-auto pb-7 pt-4 ">
+        <div class="navbar p-0 ">
+          <div class="navbar-start">
+            <a href="./blog.html" class="btn px-8 py-2 bg-[#B4F461] rounded-lg text-xl font-semibold">Blog</a>
+          </div>
+          <div class="navbar-center">
+            <div class="flex items-center">
+              <img class="mr-3" src="./assets/logo.png" alt="">
+              <h2 class="text-xl font-bold">Donate Bangladesh</h2>
             </div>
-
-            <div class="flex-1 space-y-4">
-                <div class="p-[10px] flex items-center bg-[#1111110d] w-28 rounded-lg" > 
-                    <img class="mr-3" src="./assets/coin.png" alt="">
-                    <span class="mr-1 text-[#111111b3]">0</span>
-                    <span class=" text-[#111111b3]">BDT</span>
-                </div>
-                <h2>Donate for Flood at Noakhali, Bangladesh</h2>
-                <p> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
-                <input type="text" placeholder="Write Donation Amount" class="input w-full border border-solid border-[#1111111a] p-4">
-                <button class="btn btn-success w-full bg-[#B4F461] border-none hover:bg-gray-300 text-xl ">Donate Now</button>
+          </div>
+          <div class="navbar-end">
+            <div>
+              <img src="./assets/coin.png" alt="Coin Image">
             </div>
-
+            <div>
+              <span class="text-[#111111b3] ml-2 font-medium text-xl">5500</span>
+              <span class="text-[#111111b3] font-medium text-xl">BDT</span>
+            </div>
+          </div>
         </div>
-    </section>
+      </nav>
+    </div>
+
+    <!-- Buttons -->
+    <div class="pt-8 flex justify-center gap-4 pb-8 backdrop-filter backdrop-blur-lg">
+      <button
+        class=" rounded-lg bg-[#B4F461] px-6 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out">Donation</button>
+
+      <button
+        class=" rounded-lg bg-transparent border border-[#1111114d] px-6 py-4 text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out text-[#11111199]">History</button>
+    </div>
+  </header>
+
+
+  <!-- Cards section -->
+  <section class="grid gap-y-8">
+     <!-- Card 1 -->
+    <div class="w-[79.2%] mx-auto flex items-center p-8 border rounded-2xl gap-8">
+      <div class="flex-1">
+        <img src="./assets/noakhali.png" alt="">
+      </div>
+
+      <div class="flex-1 space-y-4">
+        <div class="p-[10px] inline-flex items-center bg-[#1111110d]  rounded-lg">
+          <img class="mr-3 inline-flex" src="./assets/coin.png" alt="">
+          <span class="mr-1 text-[#111111b3]">40</span>
+          <span class=" text-[#111111b3]">BDT</span>
+        </div>
+        <h2 class="font-bold text-xl text-[#111111]">Donate for Flood at Noakhali, Bangladesh</h2>
+        <p class="text-[#111111b3] font-light"> The recent floods in Noakhali have caused significant damage to homes
+          infrastructure. Your donation will help provide essential supplies and to those affected by this disaster.
+          Every contribution, big or small, makes difference. Please join us in supporting the relief efforts and making
+          a positive impact on the lives of those in need.</p>
+        <input type="text" placeholder="Write Donation Amount"
+          class="input w-full border border-solid border-[#1111111a] p-4">
+        <button class="btn btn-success w-full bg-[#B4F461] border-none hover:bg-gray-300 text-xl ">Donate Now</button>
+      </div>
+
+    </div>
+
+
+     <!-- Card 2 -->
+    <div class="w-[79.2%] mx-auto flex items-center p-8 border rounded-2xl gap-8">
+      <div class="flex-1">
+        <img src="./assets/feni.png" alt="">
+      </div>
+
+      <div class="flex-1 space-y-4">
+        <div class="p-[10px] inline-flex items-center bg-[#1111110d]  rounded-lg">
+          <img class="mr-3 inline-flex" src="./assets/coin.png" alt="">
+          <span class="mr-1 text-[#111111b3]">6000</span>
+          <span class=" text-[#111111b3]">BDT</span>
+        </div>
+        <h2 class="font-bold text-xl text-[#111111]">Donate for Flood Relief in Feni,Bangladesh</h2>
+        <p class="text-[#111111b3] font-light"> The recent floods in Feni have devastated local communities, leading to
+          severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean
+          water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and
+          help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real
+          difference. Please consider donating today to assist those in urgent need.</p>
+        <input type="text" placeholder="Write Donation Amount"
+          class="input w-full border border-solid border-[#1111111a] p-4">
+        <button class="btn btn-success w-full bg-[#B4F461] border-none hover:bg-gray-300 text-xl ">Donate Now</button>
+      </div>
+
+    </div>
+
+
+     <!-- Card 3 -->
+    <div class="w-[79.2%] mx-auto flex items-center p-8 border rounded-2xl gap-8">
+      <div class="flex-1">
+        <img src="./assets/quota-protest.png" alt="">
+      </div>
+      <div class="flex-1 space-y-4">
+        <div class="p-[10px] inline-flex items-center bg-[#1111110d] rounded-lg">
+          <img class="mr-3 inline-flex" src="./assets/coin.png" alt="">
+          <span class="mr-1 text-[#111111b3]">20000</span>
+          <span class=" text-[#111111b3]">BDT</span>
+        </div>
+        <h2 class="font-bold text-xl text-[#111111]">Aid for Injured in the Quota Movement</h2>
+        <p class="text-[#111111b3] font-light"> The recent Quota movement has resulted in numerous injuries and
+          significant hardship for many individuals. Your support is crucial in providing medical assistance,
+          rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured
+          individuals receive the care and support they need during this challenging time. Every donation plays a vital
+          role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support
+          these brave individuals in their time of need.</p>
+        <input type="text" placeholder="Write Donation Amount"
+          class="input w-full border border-solid border-[#1111111a] p-4">
+        <button class="btn btn-success w-full bg-[#B4F461] border-none hover:bg-gray-300 text-xl ">Donate Now</button>
+      </div>
+
+    </div>
+
+
+  </section>
+
+
+  <!-- History section -->
+  <section class="grid gap-y-7">
+
+  </section>
 
 
 
@@ -72,6 +146,8 @@
 
 
 
-    <script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
+  <script src="./js/utilities.js"></script>
 </body>
+
 </html>
