Fixing error and adding qna answers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Donate Bangladesh</title>
   <!-- Css link -->
   <link rel="stylesheet" href="./style/style.css">
   <!-- Tailwind and daisy ui cdn -->
@@ -66,10 +66,10 @@
     <!-- Buttons -->
     <div class="lg:pt-8 lg:pb-8 pt-4 pb-4 flex justify-center gap-4 backdrop-filter backdrop-blur-lg">
       <button id="btn-card"
-        class=" rounded-lg bg-[#B4F461] lg:px-6 lg:py-4 px-4 py-2 text-base lg:text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out">Donation</button>
+        class=" rounded-lg bg-[#B4F461] lg:px-6 lg:py-4 px-4 py-2 text-base lg:text-xl font-semibold hover:bg-[#B4F461] transition-colors duration-400 ease-in-out">Donation</button>
 
       <button id="btn-history"
-        class=" rounded-lg bg-transparent border-2 lg:px-6 lg:py-4 px-4 py-2 text-base lg:text-xl font-semibold hover:bg-gray-300 transition-colors duration-400 ease-in-out text-[#11111199]">History</button>
+        class=" rounded-lg bg-transparent border-2 lg:px-6 lg:py-4 px-4 py-2 text-base lg:text-xl font-semibold hover:bg-[#B4F461] transition-colors duration-400 ease-in-out text-[#11111199]">History</button>
     </div>
   </header>
 
