Fixing error and adding 4th question

--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,7 @@
                     <input type="radio" name="my-accordion-4"  />
                     <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
                     <div class="collapse-content">
-                      <p>hello</p>
+                      <p>We can manipulate an element's attributes by setting "setAttribute()" property. And we can also give style to an element by adding multiple css through "setAttribute()" property.</p>
                     </div>
                 </div>
               </div>
