--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
               <img src="./assets/coin.png" alt="Coin Image">
             </div>
             <div>
-              <span id="main-balance" class="text-[#111111b3] ml-2 font-bold text-xl ">5500</span>
-              <span class="text-[#111111b3] font-bold text-xl">BDT</span>
+              <span id="main-balance" class="text-[#111111b3] ml-2 font-bold text-base lg:text-xl md:text-xl">5500</span>
+              <span class="text-[#111111b3] font-bold lg:text-xl md:text-xl text-base">BDT</span>
             </div>
             </div>
            
